# bfu_cpp_labs

./: .gitignore  ReadMe.md  lab 9
BasicGroup/Lab_2_7/: Bullet.hpp  Circle.hpp  Ship.hpp  main.cpp
Lab 6/: 2.cpp  Ex 1.cpp  Ex 2.cpp  output3.txt
Lab 8/: Lists.cpp
Lab 9/: lab 9.cpp
Semester 1/Lab 5/: Ex 4.cpp
Semester 1/Lab 6/: Ex 2.cpp
Semester 2/1. OOP/: figures.cpp
Semester 2/2. Copy constructor/: Matrix.cpp  Matrix.hpp  main.cpp
Semester 2/3. Homemade string/: String.cpp  String.hpp  main.cpp
Semester 2/4. Long arythmetics/: BigInt.cpp  BigInt.hpp  BigInt2.cpp  BigInt2.hpp  String.cpp  String.hpp  main v2.cpp  main.cpp
Semester 2/5. Template matrix/: Matrix.cpp  Matrix.hpp  main.cpp
Semester 2/6. Boolean vector/: BoolVector.cpp  BoolVector.hpp  Vector.hpp  main.cpp
Semester 2/7. FileReader/: main v2.cpp  main.cpp
Semester 2/8. SFML/: CMakeLists.txt
Semester 2/Lab 1/: digures.hpp  figures.cpp  lab1.cpp
Semester 2/Lab 2/: Matrix.cpp  Matrix.hpp
Semester 2/Lab 3/: String.cpp  String.hpp
Semester_1/Lab 5/: (П) Задача №5 Массивы.docx
Semester_1/Lab 6/: (П) Задача №6 Строки.docx  input3.txt
Semester_2/2. Copy constructor/: (П) Задача №2 Правило трех.docx  Matrix.cpp  main.cpp
Semester_2/3. Homemade string/: String.hpp
Semester_2/4. Long arythmetics/: (П) Задача №4 Длинная арифметика.docx
Semester_2/6. Boolean vector/: (П) Задача №6 Вектор bool.docx
Semester_2/7. FileReader/: (П) Задача №7 Чтение файлов различных типов.docx  (+2 more)
Semester_2/Basic/3. String copying/: (Б) Задача №3 Копирование строк.docx  CMakeLists.txt  main.cpp
(+94 files in other folders)
